k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-micro-api
  namespace: default
  labels:
    app.kubernetes.io/name: go-micro-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1 # maximum of 1 replica to be created for each time
      maxUnavailable: 1 # maximum of 1 replica unavailable
  selector:
    matchLabels:
      app.kubernetes.io/name: go-micro-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: go-micro-api
    spec:
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
      containers:
        - name: go-micro-api
          image: juliocesarmidia/go-micro-api:v1.0.0
          imagePullPolicy: Always
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534
          lifecycle:
            postStart:
              exec:
                command:
                  - "sh"
                  - "-c"
                  - "echo 'Starting container => Sending log to main process' > /proc/1/fd/1"
            preStop:
              exec:
                command:
                  - "sh"
                  - "-c"
                  - "echo 'Stopping container => Sending log to main process' > /proc/1/fd/1"
          ports:
            - name: http
              containerPort: 9000
          livenessProbe:
            httpGet:
              path: /api/v1/health/live
              port: http
              httpHeaders:
              - name: Content-type
                value: application/json
            initialDelaySeconds: 10
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/v1/health/ready
              port: http
              httpHeaders:
              - name: Content-type
                value: application/json
            initialDelaySeconds: 10
            timeoutSeconds: 10
          resources:
            limits:
              memory: "32Mi"
              cpu: "20m"
              ephemeral-storage: "10Mi"
            requests:
              memory: "16Mi"
              cpu: "10m"
              ephemeral-storage: "5Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: go-micro-api
  namespace: default
  labels:
    app.kubernetes.io/name: go-micro-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: go-micro-api
  ports:
  - port: 80
    targetPort: http
    protocol: TCP

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-micro-api
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: api.golang.local
    http:
      paths:
      - path: /api/v1/message
        pathType: Exact
        backend:
          serviceName: go-micro-api
          servicePort: 80
      - path: /api/v1/ping
        pathType: Exact
        backend:
          serviceName: go-micro-api
          servicePort: 80
      - path: /api/v1/health/
        pathType: Prefix
        backend:
          serviceName: go-micro-api
          servicePort: 80
      - path: /metrics
        pathType: Exact
        backend:
          serviceName: go-micro-api
          servicePort: 80

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-specific-tcp-port-ingress-all-egress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: go-micro-api
  ingress:
  - ports:
    - protocol: TCP
      port: 9000
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
